--- a/Clases/041125/public/page1.html
+++ b/Clases/041125/public/page1.html
@@ -10,11 +10,11 @@
     <section>
         <div>
             <h1>Pagina 1</h1>
-        </div>1
+        </div>
     </section>
     <section>
         <div>
-            <a href="/page2"></a>
+            <a href="page2.html">Ir a pagina 2 </a>
         </div>
     </section>
 </body>
