--- a/Clases/041125/public/page2.html
+++ b/Clases/041125/public/page2.html
@@ -10,11 +10,11 @@
     <section>
         <div>
             <h1>Pagina 2</h1>
-        </div>1
+        </div>
     </section>
     <section>
         <div>
-            <a href="/page1">Ir a pagina 1</a>
+            <a href="page1.html">Ir a pagina 1</a>
         </div>
     </section>
 </body>
